@@ -2,6 +2,9 @@ Revision history for Perl extension Tree::Node.
 
 0.10
 
+        - Renamed get_child_or_undef to get_child_maybe. Original
+          method exists as an alias, but is deprecated.
+
         - Corrected typos in Changes
 
         - Reformatted Changes to CPAN::Changes::Spec
